--- a/recon/Project.toml
+++ b/recon/Project.toml
@@ -14,7 +14,9 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 MIRTjim = "170b2178-6dee-4cb0-8729-b3e8b57834cc"
+MRICoilSensitivities = "c57eb701-aafc-44a2-a53c-128049758959"
 MRIFieldmaps = "5af58b90-8a55-4daf-adb4-2008a66a38cf"
+MRIFiles = "5a6f062f-bf45-497d-b654-ad17aae2a530"
 MRIReco = "bdf86e05-2d2b-5731-a332-f3fe1f9e047f"
 MriResearchTools = "557dad86-b9bd-4533-8525-1a39684d020f"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
